--- a/boss/src/styles/base.scss
+++ b/boss/src/styles/base.scss
@@ -6,6 +6,7 @@ body{
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: transparent;
   //background: #000;
 }
 *{
