login頁面的基本完成！

--- a/boss/src/styles/base.scss
+++ b/boss/src/styles/base.scss
@@ -16,6 +16,7 @@ body{
   text-decoration: none;
   border: 0;
   outline: none;
+  box-sizing: border-box;
 }
 .flex_parent{
   display: -webkit-box;
