--- a/boss/src/styles/base.scss
+++ b/boss/src/styles/base.scss
@@ -67,3 +67,9 @@ body{
   -webkit-transform-origin: 0 0;
   transform-origin: 0 0;
 }
+.pull-left{
+    float: left;
+}
+.pull-right{
+    float: right;
+}
