所有字體ICON自作并合併

--- a/boss/src/styles/fontstyle.css
+++ b/boss/src/styles/fontstyle.css
@@ -64,3 +64,72 @@
   content: "\e90c";
 }
 
+@font-face {font-family: "iconfont";
+  src: url('fonts/iconfont.eot?t=1502871143700'); /* IE9*/
+  src: url('fonts/iconfont.eot?t=1502871143700#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('fonts/iconfont.woff?t=1502871143700') format('woff'), /* chrome, firefox */
+  url('fonts/iconfont.ttf?t=1502871143700') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('fonts/iconfont.svg?t=1502871143700#iconfont') format('svg'); /* iOS 4.1- */
+}
+
+.iconfont {
+  font-family:"iconfont" !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-qiwanggongzuo:before { content: "\e65c"; }
+
+.icon-fenxiang:before { content: "\e64b"; }
+
+.icon-shangcheng:before { content: "\e77c"; }
+
+.icon-gongzuojingli:before { content: "\e61a"; }
+
+.icon-liwuhe:before { content: "\e619"; }
+
+.icon-qian:before { content: "\e605"; }
+
+.icon-yinsi:before { content: "\e62a"; }
+
+.icon-tongzhi:before { content: "\e60e"; }
+
+.icon-fenxiang1:before { content: "\e65a"; }
+
+.icon-correct:before { content: "\e6a1"; }
+
+.icon-shangquanguimo:before { content: "\e6fe"; }
+
+.icon-correct1:before { content: "\e604"; }
+
+.icon-ditie:before { content: "\e606"; }
+
+.icon-jianli:before { content: "\e707"; }
+
+.icon-message:before { content: "\e6ad"; }
+
+.icon-hot:before { content: "\e701"; }
+
+.icon-v:before { content: "\e681"; }
+
+.icon-weixiao:before { content: "\e603"; }
+
+.icon-saomiao:before { content: "\e699"; }
+
+.icon-sousuo:before { content: "\e641"; }
+
+.icon-shezhi:before { content: "\e661"; }
+
+.icon-qianbao:before { content: "\e614"; }
+
+.icon-aixin:before { content: "\e6a2"; }
+
+.icon-gongsi:before { content: "\e744"; }
+
+.icon-yinsi1:before { content: "\e626"; }
