使用mint-ui模拟无限下拉刷新

--- a/boss/src/styles/fontstyle.css
+++ b/boss/src/styles/fontstyle.css
@@ -110,6 +110,8 @@
 
 .icon-correct1:before { content: "\e604"; }
 
+.icon-loading:before { content: "\e648"; }
+
 .icon-ditie:before { content: "\e606"; }
 
 .icon-jianli:before { content: "\e707"; }
