--- a/boss/src/styles/main.scss
+++ b/boss/src/styles/main.scss
@@ -77,7 +77,7 @@
 .backTop{
   position: fixed;
   right: 10px;
-  bottom: 1.4rem;
+  bottom: 1.8rem;
   width: .6rem;
   z-index: 100;
   cursor: pointer;
@@ -126,4 +126,17 @@
   text-align: center;
   color: #8D8D8D;
   border-right: 1px solid #E5E5E5;
+}
+.page-infinite-loading{
+   line-height:1rem;
+   text-align:center;
+   @include sc(.4rem,$vuecolor);
+ }
+.page-infinite-loading span{
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px;
+}
+.mint-spinner-fading-circle {
+    position: relative;
 }
