--- a/boss/src/styles/jobdetial.scss
+++ b/boss/src/styles/jobdetial.scss
@@ -1,4 +1,110 @@
 @import "../styles/mixin.scss";
+.job_detial{
+    background: #E9EFEF;
+    // padding: .3rem 0 .4rem 0;
+    .top_detial_bg{
+        background: #fff;
+        .top_detial{
+            padding: .3rem .4rem;
+            h3{
+                span{
+                    color: $red;
+                }
+            }
+        }
+    }
+}
+.top_detial>h3{
+    font-size: .4rem;
+}
+.top_detial>p{
+    border-bottom: 1px solid #808080;
+    margin-top: .3rem;
+    overflow: hidden;
+    padding-bottom: .15rem;
+}
+.top_detial>p>span{
+    float: left;
+    font-size: .4rem;
+}
+.top_detial p span+span{
+    margin-left: .3rem;
+}
+.top_detial p i{
+    color: $vuecolor;
+}
+// 公司信息
+.comp_info{
+    width: 100%;
+    height: 2rem;
+    position: relative;
+    border-bottom: 1px solid #808080;
+}
+.comp_img{
+    width: 1.5rem;
+    height: 1.5rem;
+    overflow: hidden;
+    position: relative;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    img{
+        width: auto;
+        height: 100%;
+        position: absolute;
+        left: -100%;
+        top: -100%;
+        right: -100%;
+        bottom: -100%;
+        margin: auto;
+        cursor: pointer;
+        z-index: 10;
+    }
+}
+.comp_msg{
+    color: #999;
+    position: absolute;
+    left: 2rem;;
+    top: 50%;
+    transform: translateY(-50%);
+    @include sc(.35rem,#999);
+    h3{
+        font-weight: 100;
+    }
+}
+.comp_icon{
+    position: absolute;
+    right: .5rem;;
+    top: 50%;
+    transform: translateY(-50%);
+    i{
+        @include sc(.5rem,#999);
+    }
+}
+.comp_detial_place{
+    margin-top: .25rem;
+    position: relative;
+}
+.comp_detial_place>p{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    width: 90%;
+    @include sc(.35rem,#999);
+    span{
+        color: $vuecolor;
+        margin-right: .15rem;
+    }
+}
+.comp_detial_place>i{
+    @include sc(.4rem,$vuecolor);
+    position: absolute;
+    right: .2rem;
+    top: 50%;
+    transform: translateY(-50%);
+}
+// 
 .job_detial_header{
     padding: 0.4rem 0;
     background: $vuecolor;
