--- a/boss/src/styles/jobdetial.scss
+++ b/boss/src/styles/jobdetial.scss
@@ -3,6 +3,7 @@
     background: #E9EFEF;
     position: relative;
     padding-top: 1.3rem;
+    padding-bottom: 1.5rem;
     .job_detial_header{
         position: fixed;
         width: 100%;
@@ -174,6 +175,9 @@
     @include sc(.55rem,$vuecolor);
     font-weight: 100;
     position: relative;
+    border-bottom: 1px solid #808080;
+    padding-bottom: .1rem;
+    margin-bottom: .15rem;
     span{
         color: #2F2F2F;
         margin-left: .1rem;
@@ -228,9 +232,145 @@
         color: #999;
     }
 }
-.team-info{
-    // @include sc(.4rem,#999);
+.compare p{
+    color: #999;
+    height: .4rem;
+    line-height: .4rem;
+    span{
+        color: $vuecolor;
+    }
 }
-// .toggle_more p:nth-child(1){
-//     font-size: .4rem;
-// }
+// boss_info
+.boss_info{
+    padding: .25rem 0;
+    position: relative;
+    .boss_detail{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 75%;
+        left: 1.8rem;
+        p{
+            line-height: .46rem;
+            color: #999;
+            overflow: hidden;
+            span{
+                float: right;
+            }
+        }
+    }
+}
+.good_tips  { 
+    h3 span{
+        color: $red;
+    }
+    p{
+        color: #999;
+    }
+}
+.boss_img{
+    width: 1.2rem;
+    height: 1.2rem;
+    overflow: hidden;
+    position: relative;
+    border-radius: 50%;
+    img{
+        width: auto;
+        height: 100%;
+        position: absolute;
+        left: -100%;
+        top: -100%;
+        right: -100%;
+        bottom: -100%;
+        margin: auto;
+        cursor: pointer;
+        z-index: 10;
+    }
+}
+// recommend
+.recommend{
+    margin-top: .25rem;
+    text-align: center;
+    color: #999;
+    font-weight: 100;
+    // @include sc(,#999);
+}
+.reco_comp_img{
+    width: 1.5rem;
+    height: 1.5rem;
+    overflow: hidden;
+    position: relative;
+    float: left;
+    img{
+        width: auto;
+        height: 100%;
+        position: absolute;
+        left: -100%;
+        top: -100%;
+        right: -100%;
+        bottom: -100%;
+        margin: auto;
+        cursor: pointer;
+        z-index: 10;
+    }
+}
+.recommend_list li{
+    overflow: hidden;
+    border-bottom: 1px solid #808080;
+    padding-bottom: .2rem;
+}
+.recommend_list li+li{
+    margin-top: .25rem;
+}
+.reco_info{
+    float: left;
+    width: 80%;
+    margin-left: .2rem;
+    h3{
+        font-weight: 100;
+        overflow: hidden;
+        span{
+            float: right;
+            color: $red;
+        }
+    }
+    p{
+        color: #999;
+        line-height: .48rem;
+        span{
+            margin-right: .2rem;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+// 立即沟通
+.will_chat{
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    z-index: 50;
+    // height: 1.5rem;
+    background: #fff;
+    padding: .2rem;
+    a{
+        display: block;
+        height: 1.2rem;
+        line-height: 1.2rem;
+        background: $vuecolor;
+        text-align: center;
+        color: #fff;
+        border-radius: .1rem;
+    }
+}
