--- a/boss/src/styles/main.scss
+++ b/boss/src/styles/main.scss
@@ -128,7 +128,11 @@
 }
 .job_nav{
   background: #fff;
-  padding: 0.37037rem 0;
+  position: relative;
+}
+.job_nav>ul{
+  height: 1rem;
+  line-height: 1rem;
 }
 .job_nav li{
   text-align: center;
