完善推荐父子组件样式以及逻辑

--- a/boss/src/styles/slideTabCom.scss
+++ b/boss/src/styles/slideTabCom.scss
@@ -3,7 +3,7 @@
     background: #E9EFEF;
     padding: .4rem .6rem;
     li{
-        line-height: .65rem;
+        
         color: #8D8D8D;
         overflow: hidden;
         i{
@@ -17,7 +17,7 @@
 .slide_one li span,
 .slide_one li i{
     float: left;
-    line-height: .65rem;
+    line-height: 1.2rem;
 }
 .slide_one li i{
     display: none;
