添加父子通信說明，以及城市選擇中的動態切換數據

--- a/boss/src/styles/slideTabCom.scss
+++ b/boss/src/styles/slideTabCom.scss
@@ -66,12 +66,16 @@
 .tab_position_right{
     background: #F8F8F8;
 }
-.tab_position_left p{
+.tab_position_left p,
+.tab_position_right p{
     text-align: center;
     @include sc(.35rem,#999);
     line-height: 1.2rem;
 }
 .tab_position_left p.on{
     background: #F2F2F2;
+    color: $vuecolor;
+}
+.tab_position_right p.ishad{
     color: $vuecolor;
 }
