--- a/boss/src/styles/slideTabCom.scss
+++ b/boss/src/styles/slideTabCom.scss
@@ -77,10 +77,7 @@
     background: #F2F2F2;
     color: $vuecolor;
 }
-// .tab_position_right p span,
-// .tab_position_right p i{
-//     float: left;
-// }
+
 .tab_position_right p i{
     margin-left: .15rem;
     width: .4rem;
@@ -91,4 +88,62 @@
 }
 .tab_position_right p.ishad i{
     visibility: visible;
+}
+// reset_city
+.reset_city{
+    position: relative;
+}
+/*reset_city 移动端1px*/
+.reset_city:before,
+.reset_city:after{
+    display: table;
+    content: '';
+    position: absolute;
+    background: #808080;
+    width: 100%;
+    height: 1px;
+    -webkit-transform: scaleY(0.3);
+    transform: scaleY(0.1);
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+} 
+.reset_city:before{
+    left: 0;
+    top: 0;
+}
+.reset_city:after{
+    left: 0;
+    bottom: 0;
+}
+.reset_city li{
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    color: #999;
+    position: relative;
+}
+.reset_city li:after{
+    display: table;
+    content: '';
+    position: absolute;
+    background: #808080;
+    width: 1px;
+    height: 100%;
+    // -webkit-transform: scaleY(0.3);
+    // transform: scaleY(0.1);
+    // -webkit-transform-origin: 0 0;
+    // transform-origin: 0 0;
+    right: -1px;
+    top: 0;
+}
+.reset_city li.on{
+    color: $vuecolor;
+}
+
+// toggle_cities
+.toggle_cities p{
+    text-align: center;
+    height: 1rem;
+    line-height: 1rem;
+    color: #999;
 }
