完善公司和要求子組件的單選和多選是否選中狀態

--- a/boss/src/styles/slideTabCom.scss
+++ b/boss/src/styles/slideTabCom.scss
@@ -173,7 +173,7 @@
 .same_list li{
     float: left;
     background: #fff;
-    border: 1px solid #999;
+    border: 1px solid #CECECE;
     border-radius: .15rem;
     text-align: center;
     margin-right: .45rem;
