--- a/boss/src/styles/message.scss
+++ b/boss/src/styles/message.scss
@@ -40,7 +40,7 @@
 }
 // message_show
 .message_show{
-    padding-top: 1.2rem;
+    padding-top: 1.3rem;
     padding-bottom: 1.4rem;
     -webkit-overflow-scrolling: touch;
     overflow-scrolling: touch;
@@ -128,4 +128,59 @@
 .inter_bar li.isHad{
     border-bottom: 2px solid $vuecolor;
     color: #979797;
+}
+// interact-list
+.interact-list{
+    padding: .2rem .4rem;
+}
+.interact-same{
+    border-bottom: 1px solid #e9efef;
+    position: relative;
+    // padding: .2rem 0;
+    height: 2.2rem;
+    .interact-msg{
+        position: absolute;
+        width: 6.8rem;
+        left: 2.4rem;
+        top: 50%;
+        transform: translateY(-50%);
+        h3{
+            font-size: .4rem;
+            color: #5C5C5C;
+            font-weight: 100;
+            span{
+                float: right;
+                @include sc(.3rem,#808080);
+            }
+        }
+        p{
+            color: #808080;
+            margin-top: .06rem;
+            span{
+                margin-right: .2rem;
+            }
+        }
+    }
+}
+.inter-img{
+    width: 1.6rem;
+    height: 1.6rem;
+    position: absolute;
+    left: .3rem;
+    top: 50%;
+    transform: translateY(-50%);
+    img{
+        width: auto;
+        height: 100%;
+        position: absolute;
+        left: -100%;
+        top: -100%;
+        right: -100%;
+        bottom: -100%;
+        margin: auto;
+        border-radius: 50%;
+        cursor: pointer;
+        border: 0.013333rem solid #fff;
+        z-index: 8;
+    }
 }
