reset build config

--- a/boss/src/styles/base.scss
+++ b/boss/src/styles/base.scss
@@ -8,6 +8,7 @@ body{
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: transparent;
   //background: #000;
+  position: relative;
 }
 *{
   margin: 0;
